v0.4.0:
  * Reorganize package: Move all builtins to future.builtins.*; move all stdlib things to future.standard_library.*
  * Rename ``python-futurize`` console script to ``futurize``
  * More improvements to "Py3 to both" conversion (futurize.py --from3)
v0.3.5:
  * Fix broken package setup ("package directory 'libfuturize/tests' does not exist")
v0.3.4:
  * Add itertools.zip_longest
  * Update 2to3_backcompat tests to use futurize.py
  * Improve libfuturize fixers: correct order of imports; add imports only when necessary (except absolute_import currently)
v0.3.3:
  * Add python-futurize console script
  * Add itertools.filterfalse
  * Remove docs about unfinished backports (urllib etc.)
  * Remove old Py2 syntax in some files that breaks py3 setup.py install
v0.3.2:
  * Add test.support module
  * Add UserList, UserString, UserDict classes to collections module
  * Remove int -> long
  * Add backported _markupbase.py etc. with new-style classes to fix travis-ci build problems
  * Add working html and http.client backports
v0.3.0:
  * generalize import hooks to allow dotted imports
  * add backports of urllib, html, http from Py3.3 stdlib using ``future``
  * add ``futurize`` script for automatically turning Py2 or Py3 modules into
    cross-platform Py3 modules
  * rename future.standard_library_renames to future.standard_library. (No
    longer just renames, but backports too.)

v0.2.2.1:
  * small bug fixes to get tests passing on travis-ci.org
v0.2.1:
  * small bug fixes
v0.2.0:
  * features module renamed to modified_builtins
  * new functions added: round(), input()
  * no more namespace pollution as a policy:
	    from future import *
	should have no effect on Python 3. On Python 2, it only shadows the
	builtins; it doesn't introduce any new names.
  * end-to-end tests with Python 2 code and 2to3 now work:
  	  test_2to3_backcompat.py

v0.1.0:
  * first version with tests!
  * removed the inspect-module magic

v0.0.3:
v0.0.2:
v0.0.1: