@@ -16,12 +16,12 @@ from future.builtins.iterators import (filter, map, zip)
 from future.builtins.misc import (ascii, oct, hex, chr, int, input)
 from future.builtins.backports import (round, range, super)
 from future.builtins.str_is_unicode import str  
-from future import six
+from future import utils
 
 # We don't import the python_2_unicode_compatible decorator; only names
 # that shadow the builtins on Py2.
 
-if not six.PY3:
+if not utils.PY3:
     from future.builtins.disabled import (apply, cmp, coerce,
             execfile, file, long, raw_input, reduce, reload, unicode,
             xrange, StandardError)
